Bug 305435 - Filling a layer with the fill tool in certain conditions makes whole system hang
Summary: Filling a layer with the fill tool in certain conditions makes whole system hang
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-19 14:56 UTC by David REVOY
Modified: 2012-11-29 14:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2012-08-19 14:56:11 UTC
A weird bug and very dangerous as all system collapse/freeze . ( the system can be only hard booted to finish the bug ) 

Reproducible: Always

Steps to Reproduce:
1. open the document : http://wstaw.org/m/2012/08/19/out.png with Krita ; ( it's a png output Knotter program , 2000x2000 RGB , nothing particular... )
2. create a new layer 
3. bring this layer back to the background with the arrows on the layer stack. 
4. Select the fill tool , fill the base layer with a color. ( works with tool option > Limit to this layer ,  or even to the 'merged' default behavior )  
Actual Results:  
System hang/freeze ; even mouse pointer freeze. 


Expected Results:  
Krita fill tool fill the base layer 

I tryed to reproduce with a 'new created' document , and things ran OK. Thats why I provide this document.
Comment 1 Halla Rempt 2012-09-23 09:44:18 UTC
Outch, yes, I can confirm the system hang with this document!
Comment 2 Halla Rempt 2012-09-27 18:48:07 UTC
Git commit 544f35676b54ee55a09c40ef00d59a7f76d84d20 by Boudewijn Rempt.
Committed on 27/09/2012 at 20:47.
Pushed by rempt into branch 'master'.

Initialize variables in KisToolFill

Under some circumstances, m_sizemod was not initialized, which caused
huge problems.

M  +3    -0    krita/plugins/tools/defaulttools/kis_tool_fill.cc

http://commits.kde.org/calligra/544f35676b54ee55a09c40ef00d59a7f76d84d20