Initialize variables in KisToolFill

Under some circumstances, m_sizemod was not initialized, which caused
huge problems.

BUG:305435